Adicionar classes  e estilizar com css

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 <li><a>Novidades</a></li>
                 <li><a>Melhor avaliadas</a></li>
             </ul>
-            <a>GitHub</a>
+            <a class="github">GitHub</a>
         </nav>
     </header>
 
     <main>
-        <section>
+        <section class="hero">
             <!--Hero-->
             <header>
                 <span>novidade</span>
