Alteração do button

--- a/index.html
+++ b/index.html
@@ -23,34 +23,36 @@
     </header>
 
     <main>
-        <section class="hero">
-            <!--Hero-->
-            <header>
-                <span>novidade</span>
-                <h1>Encontre a receita perfeita!</h1>
-                <hr/>
-                <h2>Explore dezenas de variações da bebida favorita entre os devs ao redor mundo!</h2>
-            </header>
-            <!--banner da pág.-->
-            <div>
-                <figure><img src="assets/hero-banner-1.png"></figure>
-                <figure><img src="assets/hero-banner-2.png"></figure>
-                <figure><img src="assets/hero-banner-3.png"></figure>
-                <figure><img src="assets/hero-banner-4.png"></figure>
-                <figure><img src="assets/hero-banner-5.png"></figure>
-                <figure><img src="assets/hero-banner-6.png"></figure>
-                <figure><img src="assets/hero-banner-7.png"></figure>
-                <figure><img src="assets/hero-banner-8.png"></figure>
-                <figure><img src="assets/hero-banner-9.png"></figure>
-                <figure><img src="assets/hero-banner-10.png"></figure>
-                <figure><img src="assets/hero-banner-11.png"></figure>
-                <figure><img src="assets/hero-banner-12.png"></figure>
-            </div>
-        </section>
+        <!--Hero-->
+        <div class="principal">
+            <section class="hero">
+                <header class="hero-conteudo">
+                    <span class="destaque marrom">novidade</span>
+                    <h1>Encontre a receita perfeita!</h1>
+                    <hr/>
+                    <h2 class="hero-subtitulo">Explore dezenas de variações da bebida favorita entre os devs ao redor mundo!</h2>
+                </header>
+                <!--banner da pág.-->
+                <div class="hero-imagens-container">
+                    <figure><img src="assets/hero-banner-1.png"></figure>
+                    <figure><img src="assets/hero-banner-2.png"></figure>
+                    <figure><img src="assets/hero-banner-3.png"></figure>
+                    <figure><img src="assets/hero-banner-4.png"></figure>
+                    <figure><img src="assets/hero-banner-5.png"></figure>
+                    <figure><img src="assets/hero-banner-6.png"></figure>
+                    <figure><img src="assets/hero-banner-7.png"></figure>
+                    <figure><img src="assets/hero-banner-8.png"></figure>
+                    <figure><img src="assets/hero-banner-9.png"></figure>
+                    <figure><img src="assets/hero-banner-10.png"></figure>
+                    <figure><img src="assets/hero-banner-11.png"></figure>
+                    <figure><img src="assets/hero-banner-12.png"></figure>
+                </div>
+            </section>
+        </div>
 
-        <section>
-            <button>
-                <img src="assets/Button.svg"/>
+        <section class="botao-container">
+            <button type="button">
+                <img src="assets/chevrons-down.svg"/>
             </button>
         </section>
 
